# smart-portfolio

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: mf_folio_opti_test.py  multivariant_test.py  opti_mf_folio.py  opti_stock_folio.py  run_predict.py  run_pretrained_model.py  run_price_predictor.py  run_train_test.py  stock_folio_opti_test.py  univariate_test.py
src/config/: model_config.py  stock_tickers.py
src/data/: data_processor.py  data_provider.py
src/models/: cnn_lstm_model.py  lstm_model.py  mf_portfolio_optimizer.py  stock_portfolio_optimizer.py
src/training/: model_trainer.py
